--- a/src/app/home/portfolio/portfolio.component.html
+++ b/src/app/home/portfolio/portfolio.component.html
@@ -4,7 +4,7 @@
 <div class="portfolios">
   <div class="portfolio-item" *ngFor="let portfolio of portfolios">
     <div class="image">
-      <img src="./resume/assets/{{ portfolio.imageUrl }}" alt="">
+      <img src="assets/{{ portfolio.imageUrl }}" alt="">
     </div>
     <div class="portfolio-text">
       <h3>{{ portfolio.name }}</h3>
