--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-              <img src="../../assets/profile.jpg" alt="">
+              <img src="assets/profile.jpg" alt="">
           </div>
       </div>
       <div class="right-header">
