--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,52 +1,44 @@
 <div class="main-title">
-  <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+  <h2>About <span>me</span></h2>
 </div>
+
+
+
+<!--
 <div class="about-container">
   <div class="left-about">
       <h4>Information About me</h4>
       <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Eveniet labore nihil obcaecati consequatur. Debitis error doloremque,
-          vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-          delectus dolore fugiat exercitationem a,
-          ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Harum non necessitatibus deleniti eum soluta.
+          I am a driven
       </p>
-      <div class="btn-con">
-          <a href="#" class="main-btn">
-              <span class="btn-text">Download CV</span>
-              <span class="btn-icon"><i class="fas fa-download"></i></span>
-          </a>
-      </div>
   </div>
   <div class="right-about">
-      <div class="about-item">
-          <div class="abt-text">
-              <p class="large-text">650+</p>
-              <p class="small-text">Projects <br /> Completed</p>
-          </div>
-      </div>
-      <div class="about-item">
-          <div class="abt-text">
-              <p class="large-text">10+</p>
-              <p class="small-text">Years of <br /> experience</p>
-          </div>
-      </div>
       <div class="about-item">
           <div class="abt-text">
               <p class="large-text">300+</p>
               <p class="small-text">Happy <br /> Clients</p>
           </div>
       </div>
-      <div class="about-item">
-          <div class="abt-text">
-              <p class="large-text">400+</p>
-              <p class="small-text">Customer <br /> reviews</p>
-          </div>
-      </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="about-stats">
   <h4 class="stat-title">My Skills</h4>
   <div class="progress-bars">
@@ -105,67 +97,18 @@
           </div>
       </div>
   </div>
-</div>
-<h4 class="stat-title">My Timeline</h4>
+</div>-->
+<h4 class="stat-title">My Education Timeline</h4>
 <div class="timeline">
-  <div class="timeline-item">
+
+  <div class="timeline-item" *ngFor="let item of educationItems">
       <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
+          <i class="fas fa-graduation-cap"></i>
       </div>
-      <p class="tl-duration">2010 - present</p>
-      <h5>Web Developer<span> - Vircrosoft</span></h5>
+      <p class="tl-duration">{{ item.start }} - {{ item.end }}</p>
+      <h5>{{ item.name }}<span> - {{ item.school }}</span></h5>
       <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-      </p>
-  </div>
-  <div class="timeline-item">
-      <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
-      </div>
-      <p class="tl-duration">2008 - 2011</p>
-      <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
-      <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-      </p>
-  </div>
-  <div class="timeline-item">
-      <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
-      </div>
-      <p class="tl-duration">2016 - 2017</p>
-      <h5>C++ Programmer<span> - Slime Tech</span></h5>
-      <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-      </p>
-  </div>
-  <div class="timeline-item">
-      <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
-      </div>
-      <p class="tl-duration">2009 - 2013</p>
-      <h5>Business Degree<span> - Sussex University</span></h5>
-      <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-      </p>
-  </div>
-  <div class="timeline-item">
-      <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
-      </div>
-      <p class="tl-duration">2013 - 2016</p>
-      <h5>Computer Science Degree<span> - Brookes University</span></h5>
-      <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-      </p>
-  </div>
-  <div class="timeline-item">
-      <div class="tl-icon">
-          <i class="fas fa-briefcase"></i>
-      </div>
-      <p class="tl-duration">2017 - present</p>
-      <h5>3d Animation<span> - Brighton University</span></h5>
-      <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+          {{ item.description }}
       </p>
   </div>
 </div>
