--- a/src/app/home/other/other.component.html
+++ b/src/app/home/other/other.component.html
@@ -1,19 +1,20 @@
 <div class="main-title">
-  <h2>Other <span>Work</span></h2>
+  <h2>Other <span>Ventures</span></h2>
 </div>
 <div class="portfolios">
-  <div class="portfolio-item" *ngFor="let otherwork of otherworks">
+  <div class="portfolio-item" *ngFor="let otherventure of otherventures">
     <div class="image">
-      <img src="assets/{{ otherwork.imageUrl }}" alt="">
+      <img src="assets/{{ otherventure.imageUrl }}" alt="">
     </div>
     <div class="portfolio-text">
-      <h3>{{ otherwork.name }}</h3>
-      <p>{{ otherwork.description }}</p>
+      <h3>{{ otherventure.name }}</h3>
+      <p>{{ otherventure.description }}</p>
+      <p>{{ otherventure.duration }}</p>
       <div class="divider"></div>
   </div>
     <div class="hover-items">
       <div class="icons">
-          <a *ngIf="otherwork.extUrl" href="{{ otherwork.extUrl }}" class="icon" target="_blank">
+          <a *ngIf="otherventure.extUrl" href="{{ otherventure.extUrl }}" class="icon" target="_blank">
             <i class="fas fa-external-link-alt"></i>
           </a>
       </div>
