--- a/src/app/home/education/education.component.css
+++ b/src/app/home/education/education.component.css
@@ -2,6 +2,7 @@
   position: relative;
   padding-left: 3rem;
   border-left: 1px solid var(--color-grey-5);
+  padding-bottom: 3rem;
 }
 .timeline .timeline-item .tl-icon {
   position: absolute;
@@ -46,7 +47,20 @@
 .btn-qualification {
   background-color: var(--color-secondary);
   color: var(--color-primary);
+  margin-bottom: 2px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -54,11 +68,14 @@
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
+  width: auto; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  img {
+    width: inherit;
+  }
 }
 
 /* Modal Content/Box */
@@ -83,4 +100,67 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+
+.btn {
+  font-size: 14px;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  border-radius: 4px;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+}
+.btn:focus,
+.btn:active:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+.btn:hover,
+.btn:focus {
+  color: #333;
+  text-decoration: none;
+}
+.btn:active {
+  background-image: none;
+  outline: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+
+
+/* default
+---------------------------- */
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-default:focus {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #8c8c8c;
+}
+.btn-default:hover {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.btn-default:active {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
 }
