--- a/src/app/home/portfolio/portfolio.component.html
+++ b/src/app/home/portfolio/portfolio.component.html
@@ -19,6 +19,9 @@
           <a *ngIf="portfolio.ytUrl" href="{{ portfolio.ytUrl }}" class="icon" target="_blank">
               <i class="fab fa-youtube"></i>
           </a>
+          <a *ngIf="portfolio.hostedUrl" href="{{ portfolio.hostedUrl}}" class="icon" target="_blank">
+              <i class="fas fa-external-link-alt"></i>
+          </a>
       </div>
     </div>
   </div>
