--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -8,7 +8,9 @@
       <h4>Biography:</h4>
       <p>
           I am a driven, committed professional who takes immense pride
-          in my work. I have over 5 years of experience in
+          in my work. I have over 5 years of professional experience in
+          software development as well as a degree in computer science
+          along with other numerous accolades
       </p>
   </div>
   <div class="right-about">
