job search ready

--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -1,7 +1,5 @@
 /*About*/
-.about-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.about {
   padding-top: 3.5rem;
   padding-bottom: 5rem;
 }
