--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -3,24 +3,12 @@
 </div>
 
 
-<div class="about-container">
-  <div class="left-about">
-      <h4>Biography:</h4>
-      <p>
-          I am a driven, committed professional who takes immense pride
-          in my work. I have over 5 years of professional experience in
-          software development as well as a degree in computer science
-          along with other numerous accolades
-      </p>
-  </div>
-  <div class="right-about">
-      <div class="about-item">
-          <div class="abt-text">
-              <p class="large-text">300+</p>
-              <p class="small-text">Happy <br /> Clients</p>
-          </div>
-      </div>
-  </div>
+<div class="about">
+  <p>
+    I am a driven, committed full stack software engineer who 
+    takes immense pride in my work. I have over 5 years of professional 
+    experience in web software development as well as a degree in computer science.
+  </p>
 </div>
 
 
